Modification de index pour rediriger sur le sujet Marvel Complement précedent commit: -definir la clé public dans le fichier de conf dans le HomeUser -

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>FF - Crawling</title>
+<meta http-equiv="refresh" content="0; url=marvel/" />
 </head>
 <body>
 <h1>Bonjour!</h1>
